# proyecto-algoritmos-ventas

./: Analisis_Ventas.cpp  CMakeLists.txt  README.md  ventas_sudamerica.csv
data/: ventas_sudamerica.csv
estructuras/: HashMap.h  HashMapList.h
include/: Consultas.h  Estadisticas.h  EstructurasGlobales.h  HashEntry.h  HashMap.h  HashMapList.h  Lista.h  Menu.h  Modificaciones.h  ProcesadorCSV.h  Utilidades.h  Venta.h  analisis_ventas.h  contador_ifs.h  estructuras_analisis.h  gestion_ventas.h  hashEntry.h  hashMapList.h  lector_csv.h  lista.h  menu.h  nodo.h  procesador_de_csv.h  venta.h
src/: Consultas.cpp  Menu.cpp  Modificaciones.cpp  ProcesadorCSV.cpp  analisis_ventas.cpp  gestion_ventas.cpp  main.cpp  menu.cpp  procesador_de_csv.cpp
